Corrections liées aux boutons rouges dans le menu "settings" : * Texte du bouton "désactiver" de la page des plugins qui dépassait * Alignement vertical des boutons lorsqu'on réduit la fenêtre sur la page principale settings

--- a/css/style.css
+++ b/css/style.css
@@ -518,6 +518,7 @@ a.red,a.grey,a.page:not{
 	}
 	.settingsBloc .red{
 		height:24px;
+		line-height:24px;
 	}
 	#menuSettings {
 		width:calc(100% - 15px);
